[project]
name = "proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mutmut",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.sources]
mutmut = { git = "https://github.com/boxed/mutmut", branch = "main" }

[tool.mutmut]
paths_to_mutate = ["src/"]
tests_dir = ["tests"]
